z-index fix

--- a/css/style.less
+++ b/css/style.less
@@ -63,6 +63,7 @@ nav{
         top:40px;
         width:100%; 
         list-style:none;
+        z-index:2000;
         }
         
     a{
